# autotools-project

./: .gitignore  Makefile.am  README.md  configure.ac
minus/: Makefile.am
plus/: Makefile.am
program/: Makefile.am
test/: Makefile.am
